dummy/client_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: ClusterIP




apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: client-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /frontend
