dummy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: a3ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: client
            port:
              number: 5173
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
